# musix

./: .gitignore  CMakeLists.txt  GEMINI.md  GEMINI2.md  LICENSE.md  README.md  my_saved_playlist.m3u
resources/: sample.m3u
src/: main.cpp
src/AudioEngine/: AudioEngine.cpp  AudioEngine.hpp
src/CLI/: CLI.cpp
src/PlaylistManager/: PlaylistManager.cpp  PlaylistManager.hpp
